# smoke_sense

./: .gitignore  LICENSE  README.md  credentials.json  pyproject.toml
data/: 06037_2026-06-16_2026-06-16.parquet
data/06037/: 2026-05-28.parquet  2026-05-29.parquet  2026-05-30.parquet  2026-05-31.parquet  2026-06-01.parquet  2026-06-02.parquet  2026-06-03.parquet  2026-06-04.parquet  2026-06-05.parquet  2026-06-06.parquet  2026-06-07.parquet  2026-06-08.parquet  2026-06-09.parquet  2026-06-10.parquet  2026-06-11.parquet  2026-06-12.parquet  2026-06-13.parquet  2026-06-14.parquet  2026-06-15.parquet  2026-06-16.parquet  2026-06-17.parquet  2026-06-17.parquet.bz2  2026-06-18.parquet  2026-06-19.parquet  2026-06-20.parquet  2026-06-21.parquet  2026-06-22.parquet  2026-06-23.parquet  2026-06-24.parquet  2026-06-25.parquet  2026-06-26.parquet  2026-06-27.parquet  stations.parquet
scripts/: build_county_bbox.py  build_county_polygons.py  migrate_store.py
src/smoke_sense/: aqi.py  cadence.py  credentials.py  data.py  fetcher.py  geo.py  (+6 more)
tests/: conftest.py  test_aqi.py  test_cadence.py  test_credentials.py  test_credentials_cli.py  test_data.py  test_fetch_cli.py  test_fetcher.py  test_geo.py  test_logutil.py  test_metric.py  test_migrate_store.py  test_outlier_cli.py  test_outliers.py  test_outliers_command.py  test_providers_aqs.py  test_providers_base.py  test_providers_clarity.py  test_providers_hrrr.py  test_providers_purpleair.py  test_rank_cli.py  test_ranking.py  test_store.py  test_summary.py  test_summary_cli.py  test_visualize.py  test_visualize_cli.py
(+56 files in other folders)
