[project]
name = "smoke-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "cryptography>=49.0.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.package-data]
"smoke_sense._data" = ["*.parquet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
smoke-sense = "smoke_sense.bin:app"

